# VFH_3d_descriptor

./: CMakeLists.txt  Makefile  outputDescriptors.pcd  outputDescriptors_vfh.csv
src/: vfh_3d_descriptor.cpp  vfh_3d_descriptor.cpp~
